terraform -alb-ec2-docker/ec2.tf
resource "aws_instance" "ec2" {
    ami           = var.ami_id
    instance_type = var.instance_type
    key_name = var.key_name
    count = var.instance_count

subnet_id = aws_subnet.public[count.index].id
vpc_security_group_ids = [aws_security_group.ec2_sg.id]


user_data = <<-EOF
#!/bin/bash
yum update -y
amazon-linux-extras install docker -y
systemctl start docker
systemctl enable docker
docker run -d -p 80:80 nginx
EOF

    tags = {
        Name = "example-instance"
    }
}
